--- a/Sobre Nós/sobre.html
+++ b/Sobre Nós/sobre.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="../imagens/logoCMS.png" type="image/png">
     <style>
-        /* Estilos específicos para a página Sobre Nós */
         .about-hero {
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
                 url('https://images.pexels.com/photos/3184360/pexels-photo-3184360.jpeg');
@@ -527,10 +526,10 @@
                 <h3>Links Rápidos</h3>
                 <ul>
                     <li><a href="../index.html">Início</a></li>
-                    <li><a href="../Técnicas Sustentáveis/plantio.html">Técnicas</a></li>
+                    <li><a href="plantio.html">Técnicas</a></li>
                     <li><a href="../Tecnologia Agrícola/ferramentas.html">Tecnologia</a></li>
                     <li><a href="../Gestão de Custos/custos.html">Custos</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="../Sobre Nós/sobre.html">Sobre</a></li>
                 </ul>
             </div>
 
@@ -539,8 +538,16 @@
                 <address>
                     <p>Email: <a href="mailto:contato@cmsagricultura.com.br">contato@cmsagricultura.com.br</a></p>
                     <p>Telefone: <a href="tel:+5511999999999">(11) 99999-9999</a></p>
-                    <p>Endereço: Rua das Agriculturas, 123 - São Paulo/SP</p>
                 </address>
+            </div>
+
+            <div class="footer-newsletter">
+                <h3>Receba Novidades</h3>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Seu e-mail" required>
+                    <button type="submit"><i class="fas fa-paper-plane"></i></button>
+                </form>
+                <p>Receba dicas e atualizações sobre agricultura sustentável</p>
             </div>
         </div>
 
