--- a/index.html
+++ b/index.html
@@ -136,24 +136,12 @@
                 </div>
             </div>
         </section>
-
-        <section class="cta-section">
-            <div class="cta-content">
-                <h2>Pronto para transformar sua produção agrícola?</h2>
-                <p>Cadastre-se para receber nosso guia gratuito com as 10 melhores práticas sustentáveis</p>
-                <form class="cta-form">
-                    <input type="text" placeholder="Seu nome" required>
-                    <input type="email" placeholder="Seu melhor e-mail" required>
-                    <button type="submit" class="cta-button">Quero o guia gratuito</button>
-                </form>
-            </div>
-        </section>
     </main>
 
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="imagens/logoCMS.png" alt="CMS" class="footer-logo">
+                <img src="../imagens/logoCMS.png" alt="CMS" class="footer-logo">
                 <p>Agricultura Inteligente para o Futuro</p>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -165,11 +153,11 @@
             <div class="footer-links">
                 <h3>Links Rápidos</h3>
                 <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="Técnicas Sustentáveis/plantio.html">Técnicas</a></li>
-                    <li><a href="Tecnologia Agrícola/ferramentas.html">Tecnologia</a></li>
-                    <li><a href="Gestão de Custos/custos.html">Custos</a></li>
-                    <li><a href="Sobre Nós/sobre.html">Sobre</a></li>
+                    <li><a href="../index.html">Início</a></li>
+                    <li><a href="plantio.html">Técnicas</a></li>
+                    <li><a href="../Tecnologia Agrícola/ferramentas.html">Tecnologia</a></li>
+                    <li><a href="../Gestão de Custos/custos.html">Custos</a></li>
+                    <li><a href="../Sobre Nós/sobre.html">Sobre</a></li>
                 </ul>
             </div>
 
@@ -181,13 +169,21 @@
                 </address>
             </div>
 
+            <div class="footer-newsletter">
+                <h3>Receba Novidades</h3>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Seu e-mail" required>
+                    <button type="submit"><i class="fas fa-paper-plane"></i></button>
+                </form>
+                <p>Receba dicas e atualizações sobre agricultura sustentável</p>
+            </div>
         </div>
 
         <div class="footer-bottom">
             <p>&copy; 2025 Cultivo Moderno Sustentável (CMS). Todos os direitos reservados.</p>
             <div class="legal-links">
-                <a href="politica-privacidade.html">Política de Privacidade</a>
-                <a href="termos-uso.html">Termos de Uso</a>
+                <a href="../politica-privacidade.html">Política de Privacidade</a>
+                <a href="../termos-uso.html">Termos de Uso</a>
             </div>
         </div>
     </footer>
@@ -195,7 +191,8 @@
     <div id="cookieConsent" class="cookie-consent">
         <div class="cookie-content">
             <p>Nós usamos cookies para melhorar sua experiência no site. Ao continuar navegando, você concorda com nossa
-                <a href="politica-privacidade.html" target="_blank">Política de Privacidade</a>.</p>
+                <a href="politica-privacidade.html" target="_blank">Política de Privacidade</a>.
+            </p>
             <div class="cookie-buttons">
                 <button id="acceptCookies" class="cookie-btn accept">Aceitar todos</button>
                 <button id="rejectCookies" class="cookie-btn reject">Rejeitar</button>
