--- a/termos-uso.html
+++ b/termos-uso.html
@@ -311,7 +311,7 @@
                 <h3>Links Rápidos</h3>
                 <ul>
                     <li><a href="../index.html">Início</a></li>
-                    <li><a href="../Técnicas Sustentáveis/plantio.html">Técnicas</a></li>
+                    <li><a href="plantio.html">Técnicas</a></li>
                     <li><a href="../Tecnologia Agrícola/ferramentas.html">Tecnologia</a></li>
                     <li><a href="../Gestão de Custos/custos.html">Custos</a></li>
                     <li><a href="../Sobre Nós/sobre.html">Sobre</a></li>
@@ -323,16 +323,24 @@
                 <address>
                     <p>Email: <a href="mailto:contato@cmsagricultura.com.br">contato@cmsagricultura.com.br</a></p>
                     <p>Telefone: <a href="tel:+5511999999999">(11) 99999-9999</a></p>
-                    <p>Endereço: Rua das Agriculturas, 123 - São Paulo/SP</p>
                 </address>
+            </div>
+
+            <div class="footer-newsletter">
+                <h3>Receba Novidades</h3>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Seu e-mail" required>
+                    <button type="submit"><i class="fas fa-paper-plane"></i></button>
+                </form>
+                <p>Receba dicas e atualizações sobre agricultura sustentável</p>
             </div>
         </div>
 
         <div class="footer-bottom">
             <p>&copy; 2025 Cultivo Moderno Sustentável (CMS). Todos os direitos reservados.</p>
             <div class="legal-links">
-                <a href="politica-privacidade.html">Política de Privacidade</a>
-                <a href="termos-uso.html">Termos de Uso</a>
+                <a href="../politica-privacidade.html">Política de Privacidade</a>
+                <a href="../termos-uso.html">Termos de Uso</a>
             </div>
         </div>
     </footer>
