--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="imagens/logoCMS.png" type="image/png">
+    <link rel="icon" href="logoCMS.png" type="image/png">
 </head>
 
 <body>
     <header>
         <div class="container-logo">
-            <img src="imagens/logoCMS.png" alt="Cultivo Moderno Sustentável (CMS)" class="imagem-logo">
+            <img src="logoCMS.png" alt="Cultivo Moderno Sustentável (CMS)" class="imagem-logo">
             <div class="texto-logo">
                 <h1>Cultivo Moderno Sustentável</h1>
                 <p class="slogan">Agricultura Inteligente para o Futuro</p>
@@ -69,7 +69,7 @@
                     </div>
                     <h3>Sobre Nós</h3>
                     <p>Conheça nossa missão de promover uma agricultura mais eficiente e sustentável.</p>
-                    <a href="sobre.html" class="link-recurso">Nossa história →</a>
+                    <a href="#sobre" class="link-recurso">Nossa história →</a>
                 </article>
             </div>
         </section>
@@ -346,7 +346,7 @@
     <footer class="rodape">
         <div class="conteudo-rodape">
             <div class="marca-rodape">
-                <img src="../imagens/logoCMS.png" alt="CMS" class="logo-rodape">
+                <img src="logoCMS.png" alt="CMS" class="logo-rodape">
                 <p>Agricultura Inteligente para o Futuro</p>
                 <div class="redes-sociais">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
